proyecto final compilador/ast/target/generated-sources/antlr4/com/compiladores/segundo/ast/ejemploASTParser.java
// Generated from com\compiladores\segundo\ast\ejemploAST.g4 by ANTLR 4.5.1
package com.compiladores.segundo.ast;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ejemploASTParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		COMPI=1, ESCRIBIR=2, CICLO=3, CONSTANTE=4, FUN=5, INT=6, DOUBLE=7, STRING=8, 
		SUMA=9, RESTA=10, MULT=11, DIV=12, AND=13, OR=14, NOT=15, FALSE=16, TRUE=17, 
		MAYOR=18, MENOR=19, MAI=20, MEI=21, DI=22, NDI=23, ASIGNAR=24, FIN=25, 
		SEP=26, LLA_ABRIR=27, LLA_CERRAR=28, PAR_ABRIR=29, PAR_CERRAR=30, C_ABRIR=31, 
		C_CERRAR=32, IF=33, THEN=34, FOR=35, WHILE=36, MASCICLO=37, MENOSCICLO=38, 
		ID=39, NUMERO=40, NUMERODOUBLE=41, IDENT=42, COMMENT=43, WS=44;
	public static final int
		RULE_cadena = 0, RULE_compi = 1, RULE_sentence = 2, RULE_int_assing = 3, 
		RULE_combinada = 4, RULE_double_assing = 5, RULE_string_assing = 6, RULE_println = 7, 
		RULE_texto = 8, RULE_tipo_const = 9, RULE_const_assing = 10, RULE_retorno = 11, 
		RULE_condition = 12, RULE_logical_expr = 13, RULE_condicion_if = 14, RULE_comparacion = 15, 
		RULE_operador = 16, RULE_conclusion = 17, RULE_ciclo_if = 18, RULE_iniciacion = 19, 
		RULE_tope = 20, RULE_tope_op = 21, RULE_pasos = 22, RULE_paso_op = 23, 
		RULE_ciclo_for = 24, RULE_operaciones = 25, RULE_llamada = 26, RULE_ciclo_while = 27, 
		RULE_tipo = 28, RULE_repeticion = 29, RULE_var = 30, RULE_cantidad = 31, 
		RULE_assing_vector = 32, RULE_rep = 33, RULE_cant = 34, RULE_assing_matriz = 35, 
		RULE_funcion = 36;
	public static final String[] ruleNames = {
		"cadena", "compi", "sentence", "int_assing", "combinada", "double_assing", 
		"string_assing", "println", "texto", "tipo_const", "const_assing", "retorno", 
		"condition", "logical_expr", "condicion_if", "comparacion", "operador", 
		"conclusion", "ciclo_if", "iniciacion", "tope", "tope_op", "pasos", "paso_op", 
		"ciclo_for", "operaciones", "llamada", "ciclo_while", "tipo", "repeticion", 
		"var", "cantidad", "assing_vector", "rep", "cant", "assing_matriz", "funcion"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'compi'", "'mostrar'", "'ciclo'", "'constante'", "'fun'", "'int'", 
		"'double'", "'string'", "'+'", "'-'", "'*'", "'/'", "'and'", "'or'", "'!'", 
		"'false'", "'true'", "'>'", "'<'", "'>='", "'<='", "'=='", "'!='", "'='", 
		"';'", "','", "'{'", "'}'", "'('", "')'", "'['", "']'", "'if'", "'then'", 
		"'for'", "'while'", "'++'", "'--'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "COMPI", "ESCRIBIR", "CICLO", "CONSTANTE", "FUN", "INT", "DOUBLE", 
		"STRING", "SUMA", "RESTA", "MULT", "DIV", "AND", "OR", "NOT", "FALSE", 
		"TRUE", "MAYOR", "MENOR", "MAI", "MEI", "DI", "NDI", "ASIGNAR", "FIN", 
		"SEP", "LLA_ABRIR", "LLA_CERRAR", "PAR_ABRIR", "PAR_CERRAR", "C_ABRIR", 
		"C_CERRAR", "IF", "THEN", "FOR", "WHILE", "MASCICLO", "MENOSCICLO", "ID", 
		"NUMERO", "NUMERODOUBLE", "IDENT", "COMMENT", "WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "ejemploAST.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ejemploASTParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class CadenaContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(ejemploASTParser.ID, 0); }
		public TerminalNode NUMERO() { return getToken(ejemploASTParser.NUMERO, 0); }
		public CadenaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cadena; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ejemploASTListener ) ((ejemploASTListener)listener).enterCadena(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ejemploASTListener ) ((ejemploASTListener)listener).exitCadena(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ejemploASTVisitor ) return ((ejemploASTVisitor<? extends T>)visitor).visitCadena(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CadenaContext cadena() throws RecognitionException {
		CadenaContext _localctx = new CadenaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_cadena);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(74);
			_la = _input.LA(1);
			if ( !(_la==ID || _la==NUMERO) ) {
			_errHandler.recoverInline(this);
			} else {
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CompiContext extends ParserRuleContext {
		public TerminalNode COMPI() { return getToken(ejemploASTParser.COMPI, 0); }
		public TerminalNode ID() { return getToken(ejemploASTParser.ID, 0); }
		public TerminalNode LLA_ABRIR() { return getToken(ejemploASTParser.LLA_ABRIR, 0); }
		public TerminalNode LLA_CERRAR() { return getToken(ejemploASTParser.LLA_CERRAR, 0); }
		public List<SentenceContext> sentence() {
			return getRuleContexts(SentenceContext.class);
		}
		public SentenceContext sentence(int i) {
			return getRuleContext(SentenceContext.class,i);
		}
		public CompiContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_compi; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ejemploASTListener ) ((ejemploASTListener)listener).enterCompi(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ejemploASTListener ) ((ejemploASTListener)listener).exitCompi(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ejemploASTVisitor ) return ((ejemploASTVisitor<? extends T>)visitor).visitCompi(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CompiContext compi() throws RecognitionException {
		CompiContext _localctx = new CompiContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_compi);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(76);
			match(COMPI);
			setState(77);
			match(ID);
			setState(78);
			match(LLA_ABRIR);
			setState(82);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (((((_la - -1)) & ~0x3f) == 0 && ((1L << (_la - -1)) & ((1L << (EOF - -1)) | (1L << (ESCRIBIR - -1)) | (1L << (CICLO - -1)) | (1L << (CONSTANTE - -1)) | (1L << (FUN - -1)) | (1L << (INT - -1)) | (1L << (DOUBLE - -1)) | (1L << (STRING - -1)) | (1L << (MAYOR - -1)) | (1L << (MENOR - -1)) | (1L << (MAI - -1)) | (1L << (MEI - -1)) | (1L << (DI - -1)) | (1L << (LLA_ABRIR - -1)) | (1L << (PAR_ABRIR - -1)) | (1L << (MASCICLO - -1)) | (1L << (MENOSCICLO - -1)) | (1L << (ID - -1)) | (1L << (NUMERO - -1)) | (1L << (IDENT - -1)))) != 0)) {
				{
				{
				setState(79);
				sentence();
				}
				}
				setState(84);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(85);
			match(LLA_CERRAR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SentenceContext extends ParserRuleContext {
		public Int_assingContext int_assing() {
			return getRuleContext(Int_assingContext.class,0);
		}
		public CombinadaContext combinada() {
			return getRuleContext(CombinadaContext.class,0);
		}
		public Double_assingContext double_assing() {
			return getRuleContext(Double_assingContext.class,0);
		}
		public String_assingContext string_assing() {
			return getRuleContext(String_assingContext.class,0);
		}
		public PrintlnContext println() {
			return getRuleContext(PrintlnContext.class,0);
		}
		public TextoContext texto() {
			return getRuleContext(TextoContext.class,0);
		}
		public CadenaContext cadena() {
			return getRuleContext(CadenaContext.class,0);
		}
		public Tipo_constContext tipo_const() {
			return getRuleContext(Tipo_constContext.class,0);
		}
		public RetornoContext retorno() {
			return getRuleContext(RetornoContext.class,0);
		}
		public Const_assingContext const_assing() {
			return getRuleContext(Const_assingContext.class,0);
		}
		public ConditionContext condition() {
			return getRuleContext(ConditionContext.class,0);
		}
		public Logical_exprContext logical_expr() {
			return getRuleContext(Logical_exprContext.class,0);
		}
		public Condicion_ifContext condicion_if() {
			return getRuleContext(Condicion_ifContext.class,0);
		}
		public ComparacionContext comparacion() {
			return getRuleContext(ComparacionContext.class,0);
		}
		public OperadorContext operador() {
			return getRuleContext(OperadorContext.class,0);
		}
		public ConclusionContext conclusion() {
			return getRuleContext(ConclusionContext.class,0);
		}
		public Ciclo_ifContext ciclo_if() {
			return getRuleContext(Ciclo_ifContext.class,0);
		}
		public IniciacionContext iniciacion() {
			return getRuleContext(IniciacionContext.class,0);
		}
		public TopeContext tope() {
			return getRuleContext(TopeContext.class,0);
		}
		public Tope_opContext tope_op() {
			return getRuleContext(Tope_opContext.class,0);
		}
		public PasosContext pasos() {
			return getRuleContext(PasosContext.class,0);
		}
		public Paso_opContext paso_op() {
			return getRuleContext(Paso_opContext.class,0);
		}
		public Ciclo_forContext ciclo_for() {
			return getRuleContext(Ciclo_forContext.class,0);
		}
		public OperacionesContext operaciones() {
			return getRuleContext(OperacionesContext.class,0);
		}
		public LlamadaContext llamada() {
			return getRuleContext(LlamadaContext.class,0);
		}
		public Ciclo_whileContext ciclo_while() {
			return getRuleContext(Ciclo_whileContext.class,0);
		}
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public RepeticionContext repeticion() {
			return getRuleContext(RepeticionContext.class,0);
		}
		public VarContext var() {
			return getRuleContext(VarContext.class,0);
		}
		public CantidadContext cantidad() {
			return getRuleContext(CantidadContext.class,0);
		}
		public Assing_vectorContext assing_vector() {
			return getRuleContext(Assing_vectorContext.class,0);
		}
		public RepContext rep() {
			return getRuleContext(RepContext.class,0);
		}
		public CantContext cant() {
			return getRuleContext(CantContext.class,0);
		}
		public Assing_matrizContext assing_matriz() {
			return getRuleContext(Assing_matrizContext.class,0);
		}
		public FuncionContext funcion() {
			return getRuleContext(FuncionContext.class,0);
		}
		public SentenceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sentence; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ejemploASTListener ) ((ejemploASTListener)listener).enterSentence(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ejemploASTListener ) ((ejemploASTListener)listener).exitSentence(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ejemploASTVisitor ) return ((ejemploASTVisitor<? extends T>)visitor).visitSentence(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SentenceContext sentence() throws RecognitionException {
		SentenceContext _localctx = new SentenceContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_sentence);
		try {
			setState(122);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(87);
				int_assing();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(88);
				combinada();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(89);
				double_assing();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(90);
				string_assing();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(91);
				println();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(92);
				texto();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(93);
				cadena();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(94);
				tipo_const();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(95);
				retorno();
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(96);
				const_assing();
				}
				break;
			case 11:
				enterOuterAlt(_localctx, 11);
				{
				setState(97);
				condition();
				}
				break;
			case 12:
				enterOuterAlt(_localctx, 12);
				{
				setState(98);
				logical_expr(0);
				}
				break;
			case 13:
				enterOuterAlt(_localctx, 13);
				{
				setState(99);
				condicion_if();
				}
				break;
			case 14:
				enterOuterAlt(_localctx, 14);
				{
				setState(100);
				comparacion();
				}
				break;
			case 15:
				enterOuterAlt(_localctx, 15);
				{
				setState(101);
				operador();
				}
				break;
			case 16:
				enterOuterAlt(_localctx, 16);
				{
				setState(102);
				conclusion();
				}
				break;
			case 17:
				enterOuterAlt(_localctx, 17);
				{
				setState(103);
				ciclo_if();
				}
				break;
			case 18:
				enterOuterAlt(_localctx, 18);
				{
				setState(104);
				iniciacion();
				}
				break;
			case 19:
				enterOuterAlt(_localctx, 19);
				{
				setState(105);
				tope();
				}
				break;
			case 20:
				enterOuterAlt(_localctx, 20);
				{
				setState(106);
				tope_op();
				}
				break;
			case 21:
				enterOuterAlt(_localctx, 21);
				{
				setState(107);
				pasos();
				}
				break;
			case 22:
				enterOuterAlt(_localctx, 22);
				{
				setState(108);
				paso_op();
				}
				break;
			case 23:
				enterOuterAlt(_localctx, 23);
				{
				setState(109);
				ciclo_for();
				}
				break;
			case 24:
				enterOuterAlt(_localctx, 24);
				{
				setState(110);
				operaciones();
				}
				break;
			case 25:
				enterOuterAlt(_localctx, 25);
				{
				setState(111);
				llamada();
				}
				break;
			case 26:
				enterOuterAlt(_localctx, 26);
				{
				setState(112);
				ciclo_while();
				}
				break;
			case 27:
				enterOuterAlt(_localctx, 27);
				{
				setState(113);
				tipo();
				}
				break;
			case 28:
				enterOuterAlt(_localctx, 28);
				{
				setState(114);
				repeticion();
				}
				break;
			case 29:
				enterOuterAlt(_localctx, 29);
				{
				setState(115);
				var();
				}
				break;
			case 30:
				enterOuterAlt(_localctx, 30);
				{
				setState(116);
				cantidad();
				}
				break;
			case 31:
				enterOuterAlt(_localctx, 31);
				{
				setState(117);
				assing_vector();
				}
				break;
			case 32:
				enterOuterAlt(_localctx, 32);
				{
				setState(118);
				rep();
				}
				break;
			case 33:
				enterOuterAlt(_localctx, 33);
				{
				setState(119);
				cant();
				}
				break;
			case 34:
				enterOuterAlt(_localctx, 34);
				{
				setState(120);
				assing_matriz();
				}
				break;
			case 35:
				enterOuterAlt(_localctx, 35);
				{
				setState(121);
				funcion();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Int_assingContext extends ParserRuleContext {
		public TerminalNode INT() { return getToken(ejemploASTParser.INT, 0); }
		public TerminalNode ID() { return getToken(ejemploASTParser.ID, 0); }
		public TerminalNode ASIGNAR() { return getToken(ejemploASTParser.ASIGNAR, 0); }
		public TerminalNode NUMERO() { return getToken(ejemploASTParser.NUMERO, 0); }
		public TerminalNode FIN() { return getToken(ejemploASTParser.FIN, 0); }
		public Int_assingContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_int_assing; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ejemploASTListener ) ((ejemploASTListener)listener).enterInt_assing(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ejemploASTListener ) ((ejemploASTListener)listener).exitInt_assing(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ejemploASTVisitor ) return ((ejemploASTVisitor<? extends T>)visitor).visitInt_assing(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Int_assingContext int_assing() throws RecognitionException {
		Int_assingContext _localctx = new Int_assingContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_int_assing);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(124);
			match(INT);
			setState(125);
			match(ID);
			setState(126);
			match(ASIGNAR);
			setState(127);
			match(NUMERO);
			setState(128);
			match(FIN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CombinadaContext extends ParserRuleContext {
		public TerminalNode INT() { return getToken(ejemploASTParser.INT, 0); }
		public List<TerminalNode> ID() { return getTokens(ejemploASTParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(ejemploASTParser.ID, i);
		}
		public TerminalNode ASIGNAR() { return getToken(ejemploASTParser.ASIGNAR, 0); }
		public TerminalNode SUMA() { return getToken(ejemploASTParser.SUMA, 0); }
		public TerminalNode NUMERO() { return getToken(ejemploASTParser.NUMERO, 0); }
		public TerminalNode FIN() { return getToken(ejemploASTParser.FIN, 0); }
		public CombinadaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_combinada; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ejemploASTListener ) ((ejemploASTListener)listener).enterCombinada(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ejemploASTListener ) ((ejemploASTListener)listener).exitCombinada(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ejemploASTVisitor ) return ((ejemploASTVisitor<? extends T>)visitor).visitCombinada(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CombinadaContext combinada() throws RecognitionException {
		CombinadaContext _localctx = new CombinadaContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_combinada);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(130);
			match(INT);
			setState(131);
			match(ID);
			setState(132);
			match(ASIGNAR);
			setState(133);
			match(ID);
			setState(134);
			match(SUMA);
			setState(135);
			match(NUMERO);
			setState(136);
			match(FIN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Double_assingContext extends ParserRuleContext {
		public TerminalNode DOUBLE() { return getToken(ejemploASTParser.DOUBLE, 0); }
		public TerminalNode ID() { return getToken(ejemploASTParser.ID, 0); }
		public TerminalNode ASIGNAR() { return getToken(ejemploASTParser.ASIGNAR, 0); }
		public TerminalNode NUMERODOUBLE() { return getToken(ejemploASTParser.NUMERODOUBLE, 0); }
		public TerminalNode FIN() { return getToken(ejemploASTParser.FIN, 0); }
		public Double_assingContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_double_assing; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ejemploASTListener ) ((ejemploASTListener)listener).enterDouble_assing(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ejemploASTListener ) ((ejemploASTListener)listener).exitDouble_assing(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ejemploASTVisitor ) return ((ejemploASTVisitor<? extends T>)visitor).visitDouble_assing(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Double_assingContext double_assing() throws RecognitionException {
		Double_assingContext _localctx = new Double_assingContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_double_assing);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(138);
			match(DOUBLE);
			setState(139);
			match(ID);
			setState(140);
			match(ASIGNAR);
			setState(141);
			match(NUMERODOUBLE);
			setState(142);
			match(FIN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class String_assingContext extends ParserRuleContext {
		public TerminalNode STRING() { return getToken(ejemploASTParser.STRING, 0); }
		public List<TerminalNode> ID() { return getTokens(ejemploASTParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(ejemploASTParser.ID, i);
		}
		public TerminalNode ASIGNAR() { return getToken(ejemploASTParser.ASIGNAR, 0); }
		public TerminalNode FIN() { return getToken(ejemploASTParser.FIN, 0); }
		public String_assingContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_string_assing; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ejemploASTListener ) ((ejemploASTListener)listener).enterString_assing(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ejemploASTListener ) ((ejemploASTListener)listener).exitString_assing(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ejemploASTVisitor ) return ((ejemploASTVisitor<? extends T>)visitor).visitString_assing(this);
			else return visitor.visitChildren(this);
		}
	}

	public final String_assingContext string_assing() throws RecognitionException {
		String_assingContext _localctx = new String_assingContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_string_assing);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(144);
			match(STRING);
			setState(145);
			match(ID);
			setState(146);
			match(ASIGNAR);
			setState(147);
			match(ID);
			setState(148);
			match(FIN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PrintlnContext extends ParserRuleContext {
		public TerminalNode ESCRIBIR() { return getToken(ejemploASTParser.ESCRIBIR, 0); }
		public TerminalNode ID() { return getToken(ejemploASTParser.ID, 0); }
		public TerminalNode SUMA() { return getToken(ejemploASTParser.SUMA, 0); }
		public List<TerminalNode> NUMERO() { return getTokens(ejemploASTParser.NUMERO); }
		public TerminalNode NUMERO(int i) {
			return getToken(ejemploASTParser.NUMERO, i);
		}
		public TerminalNode MULT() { return getToken(ejemploASTParser.MULT, 0); }
		public TerminalNode FIN() { return getToken(ejemploASTParser.FIN, 0); }
		public PrintlnContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_println; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ejemploASTListener ) ((ejemploASTListener)listener).enterPrintln(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ejemploASTListener ) ((ejemploASTListener)listener).exitPrintln(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ejemploASTVisitor ) return ((ejemploASTVisitor<? extends T>)visitor).visitPrintln(this);
			else return visitor.visitChildren(this);
		}
	}
